[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-calculator"
version = "0.1.0"
description = "Simple physics calculation utilities for students"
authors = [
  { name="Zay Thiha Aung", email="zaythihaaung2008@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Education",
  "Topic :: Education"
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
